--- a/models/nintendo_source_dev.yml
+++ b/models/nintendo_source_dev.yml
@@ -5,5 +5,4 @@ sources:
     database: nintendo_databricks
     schema: dev
     tables:
-      - name: mkt-magalu
-      - name: mkt-mercadolivre
+      - name: nintendo-bigtable
