--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 config.json
-nintendo_source_prd.yml
+nintendo_projeto_dev
 # Default .gitignore content added by dbt Cloud# you shouldn't commit these into source control
 # these are the default directory names, adjust/add to fit your needs
 target/
