ajustando models dev dbt

--- a/models/nintendo_source_dev.yml
+++ b/models/nintendo_source_dev.yml
@@ -1,8 +1,8 @@
 version: 2
 
 sources:
-  - name: nintendo_projeto_prd
+  - name: nintendo_projeto_dev
     database: nintendo_databricks
-    schema: prd
+    schema: dev
     tables:
       - name: nintendo-bigtable
